[project]
name = "openai-chatbot"
version = "0.1.0"
description = "使用 OpenAI Chat Completions API 实现的聊天机器人"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
chatbot = "chatbot:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
