[project]
name = "openai-chatbot"
version = "0.1.0"
description = "A chatbot implementation using OpenAI Chat Completions API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
chatbot = "chatbot:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
